# resume

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  resume.json  schema.rs
src/: image.rs  main.rs  ui.rs
