[package]
name = "resume-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
regress = "0.10.3"
typify = "0.3.0"
url = "2.5.4"
anyhow = "1.0.96"
ureq = "3.0.7"
data-url = "0.3.1"
image = "0.24.6"
itertools = "0.14.0"
open = "5.3.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tui-scrollview = "0.5.1"

[build-dependencies]
serde = "1.0.218"
serde_json = "1.0.139"
regress = "0.10.3"
schemars = "0.8.22"
typify = "0.3.0"
prettyplease = "0.2.29"
syn = "2.0.98"
